syntax = "proto3";

package io.harness.pms.contracts.ambiance;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/level.proto";
import "io/harness/pms/contracts/plan/execution_metadata.proto";

message Ambiance {
  map<string, string> setupAbstractions = 1;
  repeated io.harness.pms.contracts.ambiance.Level levels = 2;
  string planExecutionId = 3;
  io.harness.pms.contracts.plan.ExecutionMetadata metadata = 4;
  int64 expressionFunctorToken = 5;
  string planId = 6;
  int64 startTs = 7;

  string stageExecutionId = 8;
}
